Add gulp task to deployment

--- a/views/layouts/base.jade
+++ b/views/layouts/base.jade
@@ -12,7 +12,7 @@ html
     meta(http-equiv='cleartype', content='on')
     title Responsive OS Pulse &mdash; An Undercurrent Product
     //- Fonts
-    link(href='http://fonts.googleapis.com/css?family=Merriweather:400,400italic,700,700italic&subset=latin,latin-ext', rel='stylesheet' type='text/css')
+    link(href='//fonts.googleapis.com/css?family=Merriweather:400,400italic,700,700italic&subset=latin,latin-ext', rel='stylesheet' type='text/css')
     //- FontAwesome
     link(href='//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css', rel='stylesheet')
     link(rel='stylesheet', href='/css/main.css')
